Change present date

--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@ sup {
 
           <div class="dates">
             <i class="fa-solid fa-calendar-days"></i>
-            Apr 2018 - Sep 2022
+            Apr 2018 - (present day)
           </div>
         </div>
 
